--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "predistic",
+  "name": "Todor Valchev Personal WebSite",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
