Avoid using of jquery.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Todor Valchev Personal WebSite",
+  "name": "Todor_Valchev_Personal_WebSite",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
