--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Todor_Valchev_Personal_WebSite",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.1.0",
+  "description": "Todor_Valchev_Personal_WebSite",
   "main": "index.js",
   "scripts": {
     "watch:sass": "node-sass sass/main.scss resources/css/style.css -w",
@@ -17,7 +17,7 @@
   "devDependencies": {
     "autoprefixer": "^9.8.6",
     "concat": "^1.0.3",
-    "node-sass": "^5.0.0",
+    "node-sass": "^7.0.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.6",
     "postcss-cli": "^8.3.1"
